--- a/index.html
+++ b/index.html
@@ -3,17 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Link css -->
+    <!-- Link To css -->
     <link rel="stylesheet" href="styles/main.css">
+    <!-- Fav Icon -->
+    <link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
+    <!-- Link To Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Games Website</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <!-- Nav -->
+        <div class="nav container">
+            <!-- Logo -->
+            <a href="index.html" class="logo">Games<span>Store</span></a>
+            <!-- Nav Icon -->
+            <div class="nav-icons">
+                <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
+                <i class='bx bxs-download'></i>
+                <div class="menu-icon">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </div>
+            <!-- Menu -->
+            <div class="menu">
+                <img src="images/menu.png" alt="">
+                <div class="navbar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#trending">Trending</a></li>
+                    <li><a href="#new">New Games</a></li>
+                    <li><a href="#action">Action Games</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </div>
+            </div>
+            <!-- Notification -->
+            <div class="notification">
+                <div class="notification-box">
+                    <i class='bx bxs-check-circle'></i>
+                    <p>congratulation, Your game download successfully</p>
+                </div>
+                <div class="notification-box box-color">
+                    <i class='bx bxs-x-circle'></i>
+                    <p>Could not apply changes</p>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Home Section Start -->
+    <section class="home container" id="home">
+        <img src="images/home.png" alt="">
+        <div class="home-text">
+            <h1>CITY OF THE <br> FUTURE</h1>
+            <a href="#" class="btn">Available Now</a>
+        </div>
+    </section>
+    <!-- Home Section End -->
+
+    <!-- Trending Section Start -->
+    <section class="trending container" id="trending">
+        <div class="heading">
+            <i class='bx bxs-flame'></i>
+            <h2>Trending Games</h2>
+        </div>
+    </section>
+    <!-- Trending Section End -->
 
 
 
 
-    <!-- Link JS -->
+
+
+    <!-- Link To JS -->
     <script src="scripts/main.js"></script>
 </body>
 </html>
