--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                             <i class='bx bxs-star'></i>
                             <span>4.7</span>
                         </div>
-                        <a href="/download.html" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                        <a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
                     </div>
                 </div>
             </div>
