--- a/download.html
+++ b/download.html
@@ -89,7 +89,7 @@
     <!-- Copyright -->
     <div class="copyright container">
         <a href="#" class="logo">Game <span>Store</span></a>
-        <p>All Right Reserved <br> &#169; Developer by Hassan Mohamed</p>
+        <a href="https://hassan-aamer.github.io/My_Portfolio/">&#169; Developer by Hassan Mohamed </a>
     </div>
     <!-- Link To Swiper File -->
     <script src="scripts/cdn.jsdelivr.net_npm_swiper@10.2.0_swiper-bundle.min.js"></script>
